--- a/src/main/webapp/telas-adm/temfiltroAdm.xhtml
+++ b/src/main/webapp/telas-adm/temfiltroAdm.xhtml
@@ -34,7 +34,7 @@
 			<center>
 				<div class="naosei">
 					<p:panel value="Login"
-						style="margin-top: -3% !important; width: 600px">
+						style="margin-top: -3% !important; width: 35%">
 
 						<h:graphicImage library="img" name="/logo-senai.png"
 							style="width:300px; margin: 7px;" />
@@ -49,11 +49,11 @@
 
 									<h:outputText value="Nome da Vaga: " />
 									<p:inputText value="#{filtroMBean.eFiltro.nomeFiltro}"
-										style="width: 350px;" />
+										style="width: 100%;" />
 									<p />
 
 									<p:outputLabel for="estado" value="Estados:" />
-									<p:selectOneMenu id="estado" value="#{a}" style="width:160px">
+									<p:selectOneMenu id="estado" value="#{a}" style="width:75%">
 										<f:selectItem itemLabel="Estados" itemValue="" />
 										<f:selectItems value="#{a}" />
 									</p:selectOneMenu>
@@ -64,7 +64,7 @@
 										actionListener="#{filtroMBean.attArea}" />
 									<p:selectCheckboxMenu id="cidades"
 										value="#{filtroMBean.eFiltro.idCidade}" label="Cidades"
-										style="width:160px" filter="true" filterMatchMode="startsWith"
+										style="width:75%" filter="true" filterMatchMode="startsWith"
 										panelStyle="width:290px" onHide="atualiza()">
 										<!-- VER SE O VALUE AQUI TA CERTO!  -->
 										<f:selectItems value="#{filtroMBean.cidades}" var="cidade"
@@ -73,7 +73,7 @@
 
 									<p />
 									<h:outputLabel for="area" value="Área:" />
-									<p:selectOneMenu style="width: 160px" panelStyle="width:150px"
+									<p:selectOneMenu style="width: 75%" panelStyle="width:150px"
 										id="area" value="#{filtroMBean.eFiltro.area}">
 										<f:selectItem itemLabel="Selecione" />
 										<f:selectItems value="#{filtroMBean.area}" var="area"
@@ -86,7 +86,7 @@
 									<P />
 
 									<h:outputLabel for="curso" value="Curso:" />
-									<p:selectOneMenu style="width: 160px" panelStyle="width:150px"
+									<p:selectOneMenu style="width: 75%" panelStyle="width:150px"
 										id="curso" value="#{filtroMBean.eFiltro.idCurso}">
 										<f:selectItem itemLabel="Selecione" itemValue="" />
 										<f:selectItems value="#{filtroMBean.curso}" var="curso"
@@ -98,7 +98,7 @@
 									<P />
 
 									<h:outputLabel for="semestre" value="Semestre:" />
-									<p:selectOneMenu style="width: 160px" panelStyle="width:150px"
+									<p:selectOneMenu style="width: 75%" panelStyle="width:150px"
 										id="semestre" value="#{filtroMBean.eFiltro.semestre}">
 										<f:selectItem itemLabel="Selecione" itemValue="" />
 										<f:selectItems value="#{filtroMBean.semestre}" var="semestre"
