--- a/src/main/webapp/telas-adm/historicoADM.xhtml
+++ b/src/main/webapp/telas-adm/historicoADM.xhtml
@@ -105,7 +105,7 @@
 								</center>
 								<p />
 								<p:commandButton value="Finalizar"
-									action="#{historicoMBean.finalizar}"
+									action="#{historicoMBean.finalizarAdm}"
 									oncomplete="trocarHist()"
 									style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 
