--- a/src/main/webapp/telas-empresa/historico.xhtml
+++ b/src/main/webapp/telas-empresa/historico.xhtml
@@ -26,7 +26,7 @@
 						<p:panel style="border: 0px; padding: 0px; margin-top:1%;">
 							<p:outputLabel value="Filtros Realizados" />
 						</p:panel>
-						<p:dataGrid id="dataGrid" value="#{filtroMBean.filtros}"
+						<p:dataGrid id="dataGrid" value="#{historicoMBean.filtros}"
 							var="filtro" columns="10" layout="grid">
 
 							<p />
@@ -80,7 +80,7 @@
 
 										<p:column headerText="Nome">
 											<f:facet name="header">Nome do Aluno</f:facet>
-       								 	#{cl.nomeDoAluno}
+       								 		#{cl.nomeDoAluno}
 										</p:column>
 
 										<p:column id="Download" icon="ui-icon-search"
