--- a/src/main/webapp/telas-empresa/temfiltro.xhtml
+++ b/src/main/webapp/telas-empresa/temfiltro.xhtml
@@ -201,7 +201,7 @@
 
 							<center>
 
-								<p:dataTable var="cl" value="#{listarCurriculoMBean.cl}">
+								<p:dataTable var="cl" value="#{filtroMBean.cl}">
 
 									<p:column headerText="Nome">
 										<f:facet name="header">Nome do Aluno</f:facet>
