--- a/src/main/webapp/telas-adm/historicoADM.xhtml
+++ b/src/main/webapp/telas-adm/historicoADM.xhtml
@@ -24,7 +24,7 @@
 						<p:panel style="border: 0px; padding: 0px; margin-top:1%;">
 							<p:outputLabel value="Filtros Realizados" />
 						</p:panel>
-						<p:dataGrid id="dataGrid" value="#{filtroMBean.filtros}"
+						<p:dataGrid id="dataGrid" value="#{historicoMBean.filtros}"
 							var="filtro" columns="10" layout="grid">
 
 							<p />
