--- a/src/main/webapp/telas-empresa/curriculo.xhtml
+++ b/src/main/webapp/telas-empresa/curriculo.xhtml
@@ -58,7 +58,7 @@
 			<br /> <strong>Telefone: </strong>
 			<h:outputLabel value="#{flash.curImp.telefone}"/>
 			<br /> <strong>Data de nascimento: </strong>
-			<h:outputLabel value="#{flash.curImp.idade}"/>
+			<h:outputLabel value="#{flash.curImp.dataNasc}"/>
 			<br /> <strong>Sexo: </strong>
 			<h:outputLabel value="#{flash.curImp.sexo}"/>
 
