--- a/src/main/webapp/APP/graficosAPP.xhtml
+++ b/src/main/webapp/APP/graficosAPP.xhtml
@@ -30,34 +30,25 @@
 				<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 
-		<p:panelGrid border="0" style="width:100%;height:100%;border-block-end:0px">
+		<p:panelGrid border="none !important" style="width:100%;height:100%;border-block-end:0px">
 			<p:row>
-				<p:column style="width:50%;height:50%">
+				<p:column style="width:33%;height:33%">
 					<p:chart type="line" model="#{chartsMBean.lineModel}"
-						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black" />
+						style="height:100%; width:70%;color:black" />
 				</p:column>
 				</p:row>
-				
-				<p:row>
-				<p:column style="width:50%;height:50%;">
-					<p:chart type="pie" model="#{chartPieMBean.pieModel1}"
-						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black" />
-				</p:column> 
-			</p:row>
-		</p:panelGrid>
-		
-		<p:panelGrid border="0" style="width:100%;height:100%;border-block-end:0px">
+
 			<p:row>
-				<p:column style="width:50%;height:50%">
+				<p:column style="width:33%;height:33%">
 					<p:chart type="bar" model="#{chartBarMBean.barModel}"
-						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black" />
+						style="height:100%; width:70%;color:black" />
 				</p:column>
 				</p:row>
 				
 				<p:row>
-				<p:column style="width:50%;height:50%">
+				<p:column style="width:33%;height:33%">
 					<p:chart type="bar" model="#{chartLineMBean.horizontalBarModel}"
-						style="height:75%; width:75%;margin-left:10%;margin-right:10%;color:black"/>
+						style="height:100%; width:70%;color:black"/>
 				</p:column>
 			</p:row>
 			</p:panelGrid>
